--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-yp.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
-      rel="stylesheet"
+    <title>Yoga Prasetya</title>
+
+    <!-- <meta name="title" content="Yoga Prasetya" />
+    <meta
+      name="description"
+      content="'My portfolio projects built with Vue, Tailwind, GSAP & TypeScript."
     />
-    <title>yogprs</title>
+    <meta
+      name="keywords"
+      content="Yoga Prasetya, Portofolio, yogprs, Vue.js, TailwindCSS, tailwind, typescript, GSAP"
+    />
+    <meta name="author" content="Yoga Prasetya" /> -->
   </head>
   <body>
     <div id="app"></div>
